--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,30 @@
     </head>
 
     <body>
+
+    <link href = "Style.css" rel = "stylesheet"/>
+
+    <div class = "content">
+   <h1>Welcome To Home of Entertainment</h1>
+    
+    <a href = "Movies.html"><p> Discover The Latest Movies </p><br></a>
+     <a href = "Games.html"> <p> Catch up to the latest games</p><br></a> 
+    <a href = "Customer Requests.html"> <p> Have a request?</p><br></a>
+      <a href = "About Us.html"> <p> About Us </p><br></a>
       
+       <a href="Movies.html">
+<img src = "" alt= "" width="500" height="335"/>
+</a> 
+      <a href="Games.html">
+<img src = "" alt="" width="500" height="335"/>
+</a> 
+      <a href="Customer Requests.html">
+<img src = "" alt="" width="500" height="335"/>
+</a> 
+      <a href="About Us.html">
+<img src = "" alt= "" width="500" height="335"/>
+</a> 
+    </div>
     </body>
   </html>
 </doctype>
