--- a/Movies.html
+++ b/Movies.html
@@ -5,7 +5,24 @@
     </head>
 
     <body>
-      
+      <a href="https://www.topgear.com/">
+<img src = "https://images.pexels.com/photos/1402787/pexels-photo-1402787.jpeg?auto=compress&cs=tinysrgb&w=600" alt= "TopG" width="500" height="335"/>
+<p>TopGear News</p></a> 
+      <a href="https://www.motorsport.com/">
+<img src = "https://images.pexels.com/photos/209892/pexels-photo-209892.jpeg?auto=compress&cs=tinysrgb&w=600" alt="MotorS" width="500" height="335"/>
+<p>MotorSport News</p></a> 
+      <a href="https://www.wrc.com/">
+<img src = "https://images.pexels.com/photos/9609133/pexels-photo-9609133.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Rally" width="500" height="335"/>
+<p>World Rally Championship News</p></a> 
+      <a href="https://www.motogp.com">
+<img src = "https://images.pexels.com/photos/1119796/pexels-photo-1119796.jpeg?auto=compress&cs=tinysrgb&w=600" alt= "GP" width="500" height="335"/>
+<p>MotoGp News</p></a> 
+
+
+        <a href = "index.html"> <p> Homepage </p></a>
+     <a href = "Customer Requests.html"> <p> Get In Touch With Us </p></a>
+        <a href = "Games.html"> <p> Need A New Game? </p></a>
+     <a href = "About Us.html"> <p> About Us </p></a>
     </body>
   </html>
 </doctype>
