--- a/Movies.html
+++ b/Movies.html
@@ -19,10 +19,13 @@
 <p>MotoGp News</p></a> 
 
 
-        <a href = "index.html"> <p> Homepage </p></a>
-     <a href = "Customer Requests.html"> <p> Get In Touch With Us </p></a>
-        <a href = "Games.html"> <p> Need A New Game? </p></a>
-     <a href = "About Us.html"> <p> About Us </p></a>
+        <a href = "Index.html"><p> Homepage </p><br></a>
+     <a href = "Games & Apps.html"> <p> Catch up to the latest games</p><br></a>
+      <a href = "TV Shows.html"> <p> TV Shows </p><br></a>
+      <a href = "Collections.html"> <p> Collections </p><br></a>
+    <a href = "Feedback.html"> <p> Feedback </p><br></a>
+      <a href = "About Us.html"> <p> About Us </p><br></a>
+      
     </body>
   </html>
 </doctype>
