--- a/Feedback.html
+++ b/Feedback.html
@@ -13,8 +13,8 @@
   <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value=""><br><br>
-  <label for="Textbox">Feedback:</label><br>
-  <input type="text" id="Textbox" name="Txtbox" value="" width="100px" height="70px"><br>
+  <label for="Feedback:">Comment:</label><br>
+   <textarea name="comment" rows="5" cols="40"></textarea><br>
   <input type="submit" value="Submit">
 </form> 
 
