--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<doctype>
+<!DOCTYPE>
   <html>
     <head>
       <title>"Homepage"</title>
@@ -42,4 +42,3 @@
     </div>
     </body>
   </html>
-</doctype>
