--- a/Movies.html
+++ b/Movies.html
@@ -1,4 +1,4 @@
-<doctype>
+<!doctype>
   <html>
     <head>
       <title>Movies</title>
@@ -28,4 +28,3 @@
       
     </body>
   </html>
-</doctype>
