--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <body>
 
-    <link href = "Style.css" rel = "stylesheet"/>
+    <link href = "style.css" rel = "stylesheet"/>
 
     <div class = "content">
    <h1>Welcome To Home of Entertainment</h1>
