--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class = "content">
    <h1>Welcome To Home of Entertainment</h1>
     
-    <a href = "Movies.html"><p> Discover The Latest Movies </p><br></a>
-     <a href = "Games & Apps.html"> <p> Catch up to the latest games</p><br></a>
-      <a href = "TV Shows.html"> <p>  </p><br></a>
-      <a href = "Collections.html"> <p> Collections </p><br></a>
-    <a href = "Feedback.html"> <p> Feedback </p><br></a>
-      <a href = "About Us.html"> <p> About Us </p><br></a>
+   <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="Games & Apps.html">Games & Apps</a></li>
+  <li><a href="Movies.html">Movies</a></li>
+  <li><a href="TV Shows.html">TV Shows</a></li>
+  <li><a href="Collections.html">Collections</a></li>
+  <li><a href="Feedback.html">Feedback</a></li>
+</ul> 
       
     </div>
     </body>
