Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -5,12 +5,16 @@
     </head>
 
     <body>
-       <a href = "Index.html"><p> Homepage </p><br></a>
-     <a href = "Movies.html"> <p> Watch the latest movies</p><br></a>
-      <a href = "TV Shows.html"> <p> TV Shows </p><br></a>
-      <a href = "Collections.html"> <p> Collections </p><br></a>
-    <a href = "Feedback.html"> <p> Feedback </p><br></a>
-      <a href = "About Us.html"> <p> About Us </p><br></a> 
+      
+      <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="Games & Apps.html">Games & Apps</a></li>
+  <li><a href="Movies.html">Movies</a></li>
+  <li><a href="TV Shows.html">TV Shows</a></li>
+  <li><a href="Collections.html">Collections</a></li>
+  <li><a href="Feedback.html">Feedback</a></li>
+</ul> 
+      
     </body>
   </html>
 </doctype>
