--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
-<!DOCTYPE>
-  <html>
-    <head>
-      <title>Homepage</title>
-    </head>
-
-    <body>
-
-    <link href = "style.css" rel = "stylesheet"/>
-
-    <div class = "content">
-   <h1>Welcome To Home of Entertainment</h1>
-    
-   <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="Games & Apps.html">Games & Apps</a></li>
-  <li><a href="Movies.html">Movies</a></li>
-  <li><a href="TV Shows.html">TV Shows</a></li>
-  <li><a href="Collections.html">Collections</a></li>
-  <li><a href="Feedback.html">Feedback</a></li>
-</ul> 
-      
+  <!DOCTYPE html>
+<html>
+<head>
+    <title>Movie Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+       .header {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
+       .nav a {
+            display: inline-block;
+            margin: 10px;
+            color: #333;
+            text-decoration: none;
+        }
+       .nav a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Welcome to Our Movie Website!</h1>
+        <div class="nav">
+            <a href="catalog.html">Movie Catalog</a>
+            <a href="login.html">Login</a>
+            <a href="register.html">Register</a>
+        </div>
     </div>
-    </body>
-  </html>
+    <div class="content">
+        <p>Welcome to our movie-based website! Here, you can browse our extensive catalog of movies, read reviews, and even write your own. To get started, please register or log in.</p>
+    </div>
+</body>
+</html>
