--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <div class="header">
         <h1>Welcome to Our Movie Website!</h1>
         <div class="nav">
-            <a href="catalog.html">Movie Catalog</a>
-            <a href="login.html">Login</a>
-            <a href="register.html">Register</a>
+  <a href="Games & Apps.html">Games & Apps</a>
+  <a href="Movies.html">Movies</a>
+  <a href="TV Shows.html">TV Shows</a>
+  <a href="Feedback.html">Feedback</a>
+              <a href="Feedback.html">Feedback</a>
         </div>
     </div>
     <div class="content">
