--- a/index.html
+++ b/index.html
@@ -1,41 +1,88 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Movie Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-       .header {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
-       .nav a {
-            display: inline-block;
-            margin: 10px;
-            color: #333;
-            text-decoration: none;
-        }
-       .nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+html {
+  font-family: "Lucida Sans", sans-serif;
+}
+
+.header {
+  background-color: #9933cc;
+  color: #ffffff;
+  padding: 15px;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  background-color: #33b5e5;
+  color: #ffffff;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.menu li:hover {
+  background-color: #0099cc;
+}
+</style>
 </head>
 <body>
-    <div class="header">
+
+<div class="header">
+  <h1>Homepage</h1>
+</div>
+
+   <div class="header">
         <h1>Welcome to Our Movie Website!</h1>
-        <div class="nav">
-  <a href="Games & Apps.html">Games & Apps</a>
-  <a href="Movies.html">Movies</a>
-  <a href="TV Shows.html">TV Shows</a>
-  <a href="Feedback.html">Feedback</a>
-              <a href="Feedback.html">Feedback</a>
-        </div>
     </div>
-    <div class="content">
+
+   <div class="content">
         <p>Welcome to our movie-based website! Here, you can browse our extensive catalog of movies, read reviews, and even write your own. To get started, please register or log in.</p>
     </div>
+
+<div class="row">
+  <div class="col-3 menu">
+    <ul>
+  <li><a href="Games & Apps.html">Games & Apps</a></li>
+  <li><a href="Movies.html">Movies</a></li>
+  <li><a href="TV Shows.html">TV Shows</a></li>
+  <li><a href="Collections.html">Collections</a></li>
+  <li><a href="Feedback.html">Feedback</a></li>
+    </ul>
+
 </body>
 </html>
