--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - google font link
@@ -37,7 +37,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="./index.html" class="logo">
-        <img src="./assets/images/logo.svg" alt="Filmlane logo">
+        <img src="" alt="Film logo">
       </a>
 
       <div class="header-actions">
