--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Filmlane - Best movie collections</title>
+  <title>Warner Bros Films - Best movie collections</title>
 
   <!-- 
     - favicon
@@ -37,7 +37,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="./index.html" class="logo">
-        <img src="" alt="Film logo">
+        <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
       </a>
 
       <div class="header-actions">
@@ -72,7 +72,7 @@
         <div class="navbar-top">
 
           <a href="./index.html" class="logo">
-            <img src="./assets/images/logo.svg" alt="Filmlane logo">
+            <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
           </a>
 
           <button class="menu-close-btn" data-menu-close-btn>
@@ -88,19 +88,19 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Movie</a>
+            <a href="Movies.html" class="navbar-link">Movie</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Tv Show</a>
+            <a href="TV Shows.html" class="navbar-link">Tv Show</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Web Series</a>
+            <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Pricing</a>
+            <a href="Feedback.html" class="navbar-link">Feedback</a>
           </li>
 
         </ul>
