--- a/Movies.html
+++ b/Movies.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="style.css">
 </head>
 
   
 <body>
-  <link rel = "stylesheet" a href="style.css"/></a>
-
+ 
  <header class="header" data-header>
     <div class="container">
 
