--- a/Movies.html
+++ b/Movies.html
@@ -117,7 +117,10 @@
 
     </div>
   </header>
-  
+
+
+<section class = "Movies of the Week">
+  <div class = ""container">
     <li>
               <div class="movie-card">
 
@@ -261,7 +264,9 @@
 
               </div>
             </li>
+      </div>
 </div>
+</section>
 
   <!-- 
         - #TOP RATED
