--- a/Movies.html
+++ b/Movies.html
@@ -122,29 +122,9 @@
 <section class="movie of the week">
         <div class="container">
 
-          <p class="section-subtitle">Online Streaming</p>
+          <p class="section-subtitle"></p>
 
           <h2 class="h2 section-title">Movies Of The Week</h2>
-
-          <ul class="filter-list">
-
-            <li>
-              <button class="filter-btn">Movies</button>
-            </li>
-
-            <li>
-              <button class="filter-btn">TV Shows</button>
-            </li>
-
-            <li>
-              <button class="filter-btn">Documentary</button>
-            </li>
-
-            <li>
-              <button class="filter-btn">Sports</button>
-            </li>
-
-          </ul>
 
           <ul class="movies-list">
 
