--- a/index.html
+++ b/index.html
@@ -24,24 +24,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <div class="search-box"> 
-    <div class="search-wrap"> 
-      <form class="d-flex align-items-center" action="filter" autocomplete="off"> 
-        <a class="filter-btn btn btn-sm" href="filter">
-          <i class="bi bi-funnel"></i> Filter
-        </a> 
-        <input type="text" placeholder="Search movies..." name="keyword"> 
-        <button type="submit">
-          <i class="bi bi-search"></i>
-        </button> 
-      </form> 
-      <div class="suggestions">  
-      </div> 
-    </div>
-    <button class="search-toggler">
-      <i class="bi bi-search"></i>
-    </button>  
-  </div>
 </head>
 
 <body id="top">
@@ -162,5 +144,24 @@
 
     </div>
   </header>
+
+  <div class="search-box"> 
+    <div class="search-wrap"> 
+      <form class="d-flex align-items-center" action="filter" autocomplete="off"> 
+        <a class="filter-btn btn btn-sm" href="filter">
+          <i class="bi bi-funnel"></i> Filter</a> 
+        <input type="text" placeholder="Search movies..." name="keyword"> 
+        <button type="submit">
+          <i class="bi bi-search"></i>
+        </button> 
+      </form> 
+      <div class="suggestions">  
+      </div> 
+    </div>
+    <button class="search-toggler">
+      <i class="bi bi-search"></i>
+    </button>  
+  </div>
+
 </body>
 </html>
