--- a/index.html
+++ b/index.html
@@ -142,26 +142,29 @@
 
       </nav>
 
-    </div>
-  </header>
-
+<div class = "step">
   <div class="search-box"> 
     <div class="search-wrap"> 
       <form class="d-flex align-items-center" action="filter" autocomplete="off"> 
         <a class="filter-btn btn btn-sm" href="filter">
-          <i class="bi bi-funnel"></i> Filter</a> 
+          <i class="bi bi-funnel">
+            ::before
+          </i> 
+          Filter
+        </a> 
         <input type="text" placeholder="Search movies..." name="keyword"> 
         <button type="submit">
-          <i class="bi bi-search"></i>
+          <i class="bi bi-search">
+            ::before
+          </i>
         </button> 
       </form> 
-      <div class="suggestions">  
       </div> 
     </div>
-    <button class="search-toggler">
-      <i class="bi bi-search"></i>
-    </button>  
   </div>
+
+    </div>
+  </header>
 
 </body>
 </html>
