--- a/TV Shows.html
+++ b/TV Shows.html
@@ -441,14 +441,14 @@
             <li>
               <div class="movie-card">
 
-                <a href="MovieDetails.html">
+                <a href="https://fmoviesz.to/tv/csi-vegas-kx0qr">
                   <figure class="card-banner">
                     <img src="https://static.fmoviesz.to/i/3/30/30ca1f7da7c890683fc759e16a26019d.jpg" alt="CSI: Vegas poster">
                   </figure>
                 </a>
 
                 <div class="title-wrapper">
-                  <a href="./movie-details.html">
+                  <a href="https://fmoviesz.to/tv/csi-vegas-kx0qr">
                     <h3 class="card-title">CSI: Vegas</h3>
                   </a>
 
@@ -478,14 +478,14 @@
             <li>
               <div class="movie-card">
 
-                <a href="MovieDetails.html">
+                <a href="https://fmoviesz.to/tv/the-sympathizer-399j8">
                   <figure class="card-banner">
                     <img src="https://static.fmoviesz.to/i/b/bc/46d6c61cb5761707966a43ecb216e2e2.jpg" alt="The Sympathizer poster">
                   </figure>
                 </a>
 
                 <div class="title-wrapper">
-                  <a href="./movie-details.html">
+                  <a href="https://fmoviesz.to/tv/the-sympathizer-399j8">
                     <h3 class="card-title">The Sympathizer </h3>
                   </a>
 
@@ -515,14 +515,14 @@
             <li>
               <div class="movie-card">
 
-                <a href="MovieDetails.html">
+                <a href="https://fmoviesz.to/tv/tracker2-o4x2j">
                   <figure class="card-banner">
                     <img src="https://static.fmoviesz.to/i/0/00/00081b1dd1a35e3f21953c909e741608.jpg" alt="Tracker poster">
                   </figure>
                 </a>
 
                 <div class="title-wrapper">
-                  <a href="./movie-details.html">
+                  <a href="https://fmoviesz.to/tv/tracker2-o4x2j">
                     <h3 class="card-title">Tracker</h3>
                   </a>
 
