--- a/Movies.html
+++ b/Movies.html
@@ -705,7 +705,7 @@
 
                 <a href="https://www.warnerbros.com/movies/black-adam">
                   <figure class="card-banner">
-                    <img src="./assets/images/movie-6.png" alt="Black Adam movie poster">
+                    <img src="https://irs.www.warnerbros.com/keyart-jpeg/movies/media/browser/blkadm_keyart_0.jpg" alt="Black Adam movie poster">
                   </figure>
                 </a>
 
