--- a/Movies.html
+++ b/Movies.html
@@ -128,11 +128,11 @@
           </li>
 
           <li>
-            <a href="Movies.html" class="navbar-link">Movie</a>
+            <a href="Movies.html" class="navbar-link">Movies</a>
           </li>
 
           <li>
-            <a href="TV Shows.html" class="navbar-link">Tv Show</a>
+            <a href="TV Shows.html" class="navbar-link">Tv Shows</a>
           </li>
 
           <li>
