Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -443,6 +443,7 @@
 
           </ul>
 
+          <a href = "https://www.warnerbros.com/games-and-apps"> See More? </a>
         </div>
       </section>
 
