--- a/Feedback.html
+++ b/Feedback.html
@@ -31,9 +31,8 @@
 
     <body>
       <style>
-        .form{
+        form{
           position: center;
-          display:flex;
         }
       </style>
 
