--- a/Feedback.html
+++ b/Feedback.html
@@ -37,16 +37,17 @@
       </style>
 
       <h2>Comment And Submit</h2>
-
+<div>
 <form action="/action_page.php">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname" value="">
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value=""><br><br>
-  <label for="Feedback:">Comment:</label><br>
-   <textarea name="comment" rows="5" cols="140"></textarea><br>
+  <input type="text" id="lname" name="lname" value="">
+  <label for="Feedback:">Comment:</label>
+   <textarea name="comment" rows="5" cols="140"></textarea>
   <input type="submit" value="Submit">
 </form> 
+</div>
 
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
