--- a/Feedback.html
+++ b/Feedback.html
@@ -1,4 +1,4 @@
-<doctype>
+<!Doctype>
   <html>
    <!DOCTYPE html>
 <html lang="en">
@@ -28,8 +28,7 @@
 
 </head>
 
-
-    <body>
+<body>
       <style>
         form{
           position: center;
@@ -83,6 +82,5 @@
   </article>
  </main>
 </div>
-    </body>
-  </html>
-</doctype>
+</body>
+</html>
