--- a/Feedback.html
+++ b/Feedback.html
@@ -36,17 +36,23 @@
       </style>
 
       <h2>Comment And Submit</h2>
-<div>
+
 <form action="/action_page.php">
+<br>
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname" value="">
-  <label for="lname">Last name:</label><br>
+</br>
+<br>
+  <label for="lname">Last name:</label>
   <input type="text" id="lname" name="lname" value="">
+</br>
+<br>
   <label for="Feedback:">Comment:</label>
    <textarea name="comment" rows="5" cols="60"></textarea>
   <input type="submit" value="Submit">
+</br>
 </form> 
-</div>
+
 
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
