--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
           </li>
 
           <li>
-            <a href="Movies.html" class="navbar-link">Movie</a>
+            <a href="Movies.html" class="navbar-link">Movies</a>
           </li>
 
           <li>
-            <a href="TV Shows.html" class="navbar-link">Tv Show</a>
+            <a href="TV Shows.html" class="navbar-link">Tv Shows</a>
           </li>
 
           <li>
@@ -105,45 +105,47 @@
           </li>
 
         </ul>
-
-        <ul class="navbar-social-list">
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-pinterest"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
       </nav>
 
     </div>
   </header>
-  
+
+  <footer>
+    <nav class = "nav-bar" data-navbar>
+     <ul class="navbar-social-list">
+
+          <li>
+            <a href="Twitter.com" class="navbar-social-link">
+              <ion-icon name="logo-twitter">Twitter</ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Facebook.com" class="navbar-social-link">
+              <ion-icon name="logo-facebook">Facebook</ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Pinterest" class="navbar-social-link">
+              <ion-icon name="logo-pinterest">Pinterest</ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Instagram.com" class="navbar-social-link">
+              <ion-icon name="logo-instagram">Instagram</ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Youtube.com" class="navbar-social-link">
+              <ion-icon name="logo-youtube">Youtube</ion-icon>
+            </a>
+          </li>
+
+        </ul>
+    </nav>
+  </footer>
 </body>
 </html>
