--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/86/86510.png" type="">
 
   <!-- 
     - custom css link
