--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/86/86510.png" type="">
+  <link rel="shortcut icon" href="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" type="">
 
   <!-- 
     - custom css link
@@ -38,7 +38,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="./index.html" class="logo">
-        <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
+        <img src="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" alt="Film logo">
       </a>
 
       <div class="header-actions">
