--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
             <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
           </li>
 
+           <li>
+            <a href="Collections.html" class="navbar-link">Collections</a>
+          </li>
+
           <li>
             <a href="Feedback.html" class="navbar-link">Feedback</a>
           </li>
@@ -156,43 +160,6 @@
 
     </div>
   </header>
-
-  <footer>
-    <nav class = "nav-bar" data-navbar>
-     <ul class="navbar-social-list">
-
-          <li>
-            <a href="Twitter.com" class="navbar-social-link">
-              <ion-icon name="logo-twitter">Twitter</ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Facebook.com" class="navbar-social-link">
-              <ion-icon name="logo-facebook">Facebook</ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Pinterest" class="navbar-social-link">
-              <ion-icon name="logo-pinterest">Pinterest</ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Instagram.com" class="navbar-social-link">
-              <ion-icon name="logo-instagram">Instagram</ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Youtube.com" class="navbar-social-link">
-              <ion-icon name="logo-youtube">Youtube</ion-icon>
-            </a>
-          </li>
-
-        </ul>
-    </nav>
-  </footer>
+  
 </body>
 </html>
