--- a/TV Shows.html
+++ b/TV Shows.html
@@ -73,6 +73,10 @@
             <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
           </li>
 
+             <li>
+            <a href="Collections.html" class="navbar-link">Collections</a>
+          </li>
+
           <li>
             <a href="Feedback.html" class="navbar-link">Feedback</a>
           </li>
