--- a/Collections.html
+++ b/Collections.html
@@ -2,10 +2,88 @@
   <html>
     <head>
       <title>Collections</title>
+      
     </head>
 
     <body>
-      
+
+      <nav class="navbar" data-navbar>
+
+        <div class="navbar-top">
+
+          <a href="./index.html" class="logo">
+            <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
+          </a>
+
+          <button class="menu-close-btn" data-menu-close-btn>
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+
+        </div>
+
+        <ul class="navbar-list">
+
+          <li>
+            <a href="./index.html" class="navbar-link">Home</a>
+          </li>
+
+          <li>
+            <a href="Movies.html" class="navbar-link">Movies</a>
+          </li>
+
+          <li>
+            <a href="TV Shows.html" class="navbar-link">Tv Shows</a>
+          </li>
+
+          <li>
+            <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
+          </li>
+
+             <li>
+            <a href="Collections.html" class="navbar-link">Collections</a>
+          </li>
+
+          <li>
+            <a href="Feedback.html" class="navbar-link">Feedback</a>
+          </li>
+
+        </ul>
+
+        <ul class="navbar-social-list">
+
+          <li>
+            <a href="#" class="navbar-social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Facebook.com/Sign in" class="navbar-social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Pinterest.com" class="navbar-social-link">
+              <ion-icon name="logo-pinterest"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Instagram.com" class="navbar-social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Youtube.com" class="navbar-social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
+
+      </nav>
     </body>
   </html>
 </Doctype>
