--- a/index.html
+++ b/index.html
@@ -28,43 +28,23 @@
 * {
   box-sizing: border-box;
 }
-.menu {
-  float: left;
-  width: 20%;
-}
-.menuitem {
-  padding: 8px;
-  margin-top: 7px;
-  border-bottom: 1px solid #f1f1f1;
-}
-.main {
-  float: left;
-  width: 60%;
-  padding: 0 20px;
-  overflow: hidden;
-}
-.right {
-  background-color: lightblue;
-  float: left;
-  width: 20%;
-  padding: 10px 15px;
-  margin-top: 7px;
-}
-
 @media only screen and (max-width:800px) {
   /* For tablets: */
-  .main {
-    width: 80%;
-    padding: 0;
-  }
-  .right {
+   .navbar, .overlay, .header-actions, .search-btn, .lang-wrapper, .navbar-top, navbar-list {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
+    
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
-  .menu, .main, .right {
+  .navbar, .overlay, .header-actions, .search-btn, .lang-wrapper, .navbar-top, navbar-list {
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 </style>
