--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="overlay" data-overlay></div>
 
       <a href="./index.html" class="logo">
-        <img src="https://seeklogo.com/images/W/Warner_Bros_Online-logo-888536E54D-seeklogo.com.png" alt="Film logo">
+        <img src="" alt="Film logo">
       </a>
 
       <div class="header-actions">
