--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
       <div class="overlay" data-overlay></div>
 
-      <a href="./index.html" class="logo">
-        <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
+      <a href="#" class="logo">
+        <img src="" alt="">
       </a>
 
       <div class="header-actions">
