--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 }
 @media only screen and (max-width:800px) {
   /* For tablets: */
-   .navbar, .overlay, .header-actions, .search-btn, .lang-wrapper, .navbar-top, navbar-list {
+   .header {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -40,7 +40,7 @@
     
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
-  .navbar, .overlay, .header-actions, .search-btn, .lang-wrapper, .navbar-top, navbar-list {
+  .header {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
