--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
-  .header {
+  .container {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
