--- a/Feedback.html
+++ b/Feedback.html
@@ -29,8 +29,93 @@
 </head>
 
 <body>
+
+  
+  <header class="header" data-header>
+    <div class="container">
+
+      <div class="overlay" data-overlay></div>
+
+      <a href="#" class="logo">
+        <img src="" alt="">
+      </a>
+
+      <div class="header-actions">
+
+        <button class="search-btn">
+          <ion-icon name="search-outline"></ion-icon>
+        </button>
+
+        <div class="lang-wrapper">
+          <label for="language">
+            <ion-icon name="globe-outline"></ion-icon>
+          </label>
+
+          <select name="language" id="language">
+            <option value="en">EN</option>
+            <option value="au">AU</option>
+            <option value="ar">AR</option>
+            <option value="tu">TU</option>
+          </select>
+        </div>
+
+        <button class="btn btn-primary">
+        <a href = "https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2F&ddm=0&ec=GAZAmgQ&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=en&ifkv=AaSxoQyUC_kNxStvVDAM0jkY0OxkiPziE1LcPdhV9NKW7ogaSsx1ovulixyA_Hxm_igiHXASzZVlEg&passive=true&dsh=S-100364810%3A1715637859651376">Sign In</a>
+        </button>
+
+      </div>
+
+      <button class="menu-open-btn" data-menu-open-btn>
+        <ion-icon name="reorder-two"></ion-icon>
+      </button>
+
+      <nav class="navbar" data-navbar>
+
+        <div class="navbar-top">
+
+          <a href="./index.html" class="logo">
+            <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
+          </a>
+
+          <button class="menu-close-btn" data-menu-close-btn>
+            <ion-icon name="close-outline"></ion-icon>
+          </button>
+
+        </div>
+
+        <ul class="navbar-list">
+
+          <li>
+            <a href="./index.html" class="navbar-link">Home</a>
+          </li>
+
+          <li>
+            <a href="Movies.html" class="navbar-link">Movies</a>
+          </li>
+
+          <li>
+            <a href="TV Shows.html" class="navbar-link">Tv Shows</a>
+          </li>
+
+          <li>
+            <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
+          </li>
+
+           <li>
+            <a href="Collections.html" class="navbar-link">Collections</a>
+          </li>
+
+          <li>
+            <a href="Feedback.html" class="navbar-link">Feedback</a>
+          </li>
+
+        </ul>
+      </nav>
+
+    </div>
+  </header>
      
-      <h2>Comment And Submit</h2>
+      <h2></h2>
 
     <div class="feedback-container">
 
