--- a/index.html
+++ b/index.html
@@ -37,10 +37,6 @@
 
       <div class="overlay" data-overlay></div>
 
-      <a href="#" class="logo">
-        <img src="" alt="">
-      </a>
-
       <div class="header-actions">
 
         <button class="search-btn">
@@ -60,9 +56,7 @@
           </select>
         </div>
 
-        <button class="btn btn-primary">
-        <a href = "https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2F&ddm=0&ec=GAZAmgQ&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=en&ifkv=AaSxoQyUC_kNxStvVDAM0jkY0OxkiPziE1LcPdhV9NKW7ogaSsx1ovulixyA_Hxm_igiHXASzZVlEg&passive=true&dsh=S-100364810%3A1715637859651376">Sign In</a>
-        </button>
+        <button class="btn btn-primary">Sign in</button>
 
       </div>
 
@@ -102,7 +96,7 @@
             <a href="Games & Apps.html" class="navbar-link">Games And Apps</a>
           </li>
 
-           <li>
+             <li>
             <a href="Collections.html" class="navbar-link">Collections</a>
           </li>
 
@@ -111,6 +105,41 @@
           </li>
 
         </ul>
+
+        <ul class="navbar-social-list">
+
+          <li>
+            <a href="#" class="navbar-social-link">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Facebook.com/Sign in" class="navbar-social-link">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Pinterest.com" class="navbar-social-link">
+              <ion-icon name="logo-pinterest"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Instagram.com" class="navbar-social-link">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="Youtube.com" class="navbar-social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+
+        </ul>
+
       </nav>
 
     </div>
