--- a/Collections.html
+++ b/Collections.html
@@ -144,9 +144,9 @@
 <section class="tv-series">
         <div class="container">
 
-          <p class="section-subtitle">Best Collections Made Possible</p>
+          <p class="section-subtitle">Movies of the 80's, Drama Flicks and Fam Favourites.</p>
 
-          <h2 class="h2 section-title"></h2>
+          <h2 class="h2 section-title">COLLECTIONS</h2>
 
           <ul class="movies-list">
 
@@ -320,7 +320,7 @@
 
                 <a href="https://www.warnerbros.com/collections/halloween">
                   <figure class="card-banner">
-                    <img src="https://static.fmoviesz.to/i/6/63/358f5ec5c3952f87d333151535e0a7b4.jpg" alt="Chills n' Thrills poster">
+                    <img src="https://irs.www.warnerbros.com/hero-banner-jpeg/collections/banners/wbdotcom-banner-halloween-halloween-2023.jpg" alt="Chills n' Thrills poster">
                   </figure>
                 </a>
 
@@ -465,7 +465,7 @@
 
                 <a href="https://www.warnerbros.com/collections/binge-tv">
                   <figure class="card-banner">
-                    <img src="https://static.fmoviesz.to/i/3/30/30ca1f7da7c890683fc759e16a26019d.jpg" alt="Binge TV poster">
+                    <img src="https://irs.www.warnerbros.com/hero-banner-jpeg/collections/banners/binge_tv_4320x1080_banner_safezone.jpg" alt="Binge TV poster">
                   </figure>
                 </a>
 
