--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
 
     </div>
   </header>
+
+   <h2 class="h2 section-title">HOME</h2>
+  
+          <p class="section-subtitle"></p>
   
 </body>
 </html>
