--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
           <div class="hero-content">
 
-            <p class="hero-subtitle">Warner Bros Studio</p>
+            <p class="hero-subtitle">Warner Bros Entertainment</p>
 
             <h1 class="h1 hero-title">
-              Unlimited <strong>Movies</strong>, TVs Shows, & More.
+              Unlimited Movies, TVs Shows, <strong>& More.</strong>
             </h1>
 
             <div class="meta-wrapper">
@@ -53,9 +53,13 @@
               </div>
 
               <div class="ganre-wrapper">
-                <a href="#"></a>
+                <a href="https://www.facebook.com/warnerbrosent/">Facebook</a>
 
-                <a href="#"></a>
+                <a href="https://www.instagram.com/warnerbrosentertainment/">Instagram</a>
+                
+                 <a href="https://twitter.com/Warnerbros/">Twitter</a>
+
+                 <a href="https://www.youtube.com/user/WarnerBrosPictures/">YouTube</a>
               </div>
 
               <div class="date-time">
@@ -77,7 +81,7 @@
             </div>
 
             <button class="btn btn-primary">
-              <ion-icon name="play"></ion-icon>
+              <ion-icon name="play" a href = "https://www.warnerbros.com/"></ion-icon>
 
               <span>Watch now</span>
             </button>
@@ -161,40 +165,6 @@
 
         </ul>
 
-        <ul class="navbar-social-list">
-
-          <li>
-            <a href="#" class="navbar-social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Facebook.com/Sign in" class="navbar-social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Pinterest.com" class="navbar-social-link">
-              <ion-icon name="logo-pinterest"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Instagram.com" class="navbar-social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="Youtube.com" class="navbar-social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
       </nav>
 
     </div>
@@ -202,7 +172,7 @@
 
    <h2 class="h2 section-title">HOME</h2>
   
-          <p class="section-subtitle"></p>
+          <p class="section-subtitle">Warner Bros. is a major American entertainment company known for its film, television, and video game productions. Founded in 1923, it has since grown into one of the largest media conglomerates in the world, with a diverse portfolio that includes the Warner Bros. Pictures film studio, Warner Bros. Television, Warner Bros. Interactive Entertainment, and Warner Bros. Consumer Products</p>
   
 </body>
 </html>
