--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
           </select>
         </div>
 
-        <button class="btn btn-primary">Sign in</button>
+        <button class="btn btn-primary">
+        <a href = "https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%2F&ddm=0&ec=GAZAmgQ&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=en&ifkv=AaSxoQyUC_kNxStvVDAM0jkY0OxkiPziE1LcPdhV9NKW7ogaSsx1ovulixyA_Hxm_igiHXASzZVlEg&passive=true&dsh=S-100364810%3A1715637859651376">Sign In</a>
+        </button>
 
       </div>
 
