--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 
       <div class="overlay" data-overlay></div>
 
+      
+      <a href="./index.html" class="logo">
+        <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
+      </a>
+
       <div class="header-actions">
 
         <button class="search-btn">
