--- a/Feedback.html
+++ b/Feedback.html
@@ -36,10 +36,11 @@
 
       <div class="overlay" data-overlay></div>
 
-      <a href="#" class="logo">
-        <img src="" alt="">
+     
+      <a href="./index.html" class="logo">
+        <img src="https://cdn-icons-png.flaticon.com/128/86/86510.png" alt="Film logo">
       </a>
-
+      
       <div class="header-actions">
 
         <button class="search-btn">
