--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     - #HEADER
   -->
 
+ <h2 class="h2 section-title">HOME</h2>
   
       <section class="hero">
         <div class="container">
@@ -81,7 +82,8 @@
             </div>
 
             <button class="btn btn-primary">
-              <ion-icon name="play" a href = "https://www.warnerbros.com/"></ion-icon>
+              <ion-icon name="play"></ion-icon>
+              <a href = "https://www.warnerbros.com/"></a>
 
               <span>Watch now</span>
             </button>
@@ -176,8 +178,6 @@
 
     </div>
   </header>
-
-   <h2 class="h2 section-title">HOME</h2>
   
           <p class="section-subtitle">Warner Bros. is a major American entertainment company known for its film, television, and video game productions. Founded in 1923, it has since grown into one of the largest media conglomerates in the world, with a diverse portfolio that includes the Warner Bros. Pictures film studio, Warner Bros. Television, Warner Bros. Interactive Entertainment, and Warner Bros. Consumer Products</p>
   
