--- a/Collections.html
+++ b/Collections.html
@@ -618,7 +618,7 @@
             </li>
 
             <li>
-              <a href = "https://www.warnerbros.com/tv"> See More? </a>
+              <a href = "https://www.warnerbros.com/collections"> See More? </a>
             </li>
           </ul>
 
