--- a/TV Shows.html
+++ b/TV Shows.html
@@ -8,6 +8,44 @@
 
   
 <body>
+
+   <section class="hero">
+        <div class="container">
+
+          <div class="hero-content">
+
+            <p class="hero-subtitle">Warner Bros Entertainment</p>
+
+            <h1 class="h1 hero-title">
+              Unlimited <strong>TVs Shows</strong>
+            </h1>
+
+             <p>Dive into Drama, Comedy, and Thrills - Where Every Episode is an Adventure!</p>
+
+
+            <div class="meta-wrapper">
+
+              <div class="badge-wrapper">
+                <div class="badge badge-fill"></div>
+
+                <div class="badge badge-outline"></div>
+              </div>
+
+              </div>
+
+            </div>
+
+            <button class="btn btn-primary">
+              <ion-icon name="play"></ion-icon>
+              <a href = "https://www.warnerbros.com/"></a>
+
+              <span>Watch now</span>
+            </button>
+
+          </div>
+
+        </div>
+      </section>
  
  <header class="header" data-header>
     <div class="container">
