Update Games & Apps.html

--- a/Games & Apps.html
+++ b/Games & Apps.html
@@ -27,7 +27,41 @@
 </head>
 
     <body id = "top">
-      
+
+       <section class="hero">
+        <div class="container">
+
+          <div class="hero-content">
+
+            <h1 class="h1 hero-title">
+              Unlimited <strong>Games And Apps</strong>
+            </h1>
+
+            <div class="meta-wrapper">
+
+              <div class="badge-wrapper">
+                <div class="badge badge-fill"></div>
+
+                <div class="badge badge-outline"></div>
+              </div>
+
+              </div>
+
+                     <p class="hero-subtitle">Level Up Your Entertainment - Immerse Yourself in Interactive Worlds!</p>
+            </div>
+
+            <button class="btn btn-primary">
+              <ion-icon name="play"></ion-icon>
+              <a href = "https://www.warnerbros.com/"></a>
+
+              <span>Watch now</span>
+            </button>
+
+          </div>
+
+        </div>
+      </section>
+
      <header class="header" data-header>
     <div class="container">
 
